[project]
name = "resselt"
version = "1.0.0"
description = "Image Super-Resolution PyTorch architectures loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.8.0",
  "numpy>=1",
  "safetensors>=0.5.2",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "rewaifu"
url = "https://pypi.shd.llc/rewaifu/stable"
publish-url = "https://pypi.shd.llc/rewaifu/stable"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lefthook>=1.11.13",
    "ruff>=0.9.4",
    "typer>=0.15.4",
]
