[project]
name = "resselt"
version = "1.2.0"
description = "Image Super-Resolution PyTorch architectures loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "numpy>=1",
    "safetensors>=0.5.2",
    "torch>=2.6.0"
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.7.0",
]
cu126 = [
    "torch>=2.6.0",
]
cu124 = [
    "torch>=2.6.0",
]
cu118 = [
    "torch>=2.6.0"
]

[tool.uv]
conflicts = [
    [
        { extra = "cu118" },
        { extra = "cu124" },
        { extra = "cu126" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu124", extra = "cu124", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lefthook>=1.11.13",
    "ruff>=0.9.4",
    "typer>=0.15.4",
]

[tool.ruff]
line-length = 150
indent-width = 4
preview = true
exclude = ["resselt/archs/**/*"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ['ALL']
fixable = ["ALL"]
ignore = ['ANN', 'COM812', 'CPY', 'D', "DOC", 'Q000', 'Q003', 'S101', 'PLR', 'FBT001', 'FBT002', 'N8']

[tool.ruff.lint.isort]
split-on-trailing-comma = false
